--- a/react-blog-admin/package.json
+++ b/react-blog-admin/package.json
@@ -13,6 +13,7 @@
         "customize-cra": "^1.0.0",
         "highlight.js": "^11.0.1",
         "marked": "^2.1.2",
+        "moment": "^2.29.1",
         "react": "^17.0.2",
         "react-app-rewired": "^2.1.8",
         "react-dom": "^17.0.2",
