--- a/react-blog-admin/package.json
+++ b/react-blog-admin/package.json
@@ -14,6 +14,7 @@
         "highlight.js": "^11.0.1",
         "marked": "^2.1.2",
         "moment": "^2.29.1",
+        "nanoid": "^3.1.23",
         "qs": "^6.10.1",
         "react": "^17.0.2",
         "react-app-rewired": "^2.1.8",
