--- a/react-blog-admin/package.json
+++ b/react-blog-admin/package.json
@@ -19,6 +19,7 @@
         "react": "^17.0.2",
         "react-app-rewired": "^2.1.8",
         "react-dom": "^17.0.2",
+        "react-load-script": "^0.0.6",
         "react-redux": "^7.2.4",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
