--- a/react-blog-admin/package.json
+++ b/react-blog-admin/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@ant-design/charts": "^1.1.20",
         "@ant-design/icons": "^4.6.2",
         "@cloudbase/js-sdk": "^1.5.0",
         "@testing-library/jest-dom": "^5.11.4",
