--- a/react-blog-admin/package.json
+++ b/react-blog-admin/package.json
@@ -13,6 +13,7 @@
         "babel-plugin-import": "^1.13.3",
         "customize-cra": "^1.0.0",
         "highlight.js": "^11.0.1",
+        "jinrishici": "^1.0.6",
         "marked": "^2.1.2",
         "moment": "^2.29.1",
         "nanoid": "^3.1.23",
