--- a/react-blog/package.json
+++ b/react-blog/package.json
@@ -11,8 +11,11 @@
         "antd": "^4.16.7",
         "babel-plugin-import": "^1.13.3",
         "customize-cra": "^1.0.0",
+        "highlight.js": "^11.1.0",
         "jinrishici": "^1.0.6",
+        "marked": "^2.1.3",
         "moment": "^2.29.1",
+        "qs": "^6.10.1",
         "react": "^17.0.2",
         "react-app-rewired": "^2.1.8",
         "react-dom": "^17.0.2",
