--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     },
     "scripts": {
         "start": "react-app-rewired start",
-        "build": "react-app-rewired build",
+        "build": "CI=false && react-app-rewired build",
         "test": "react-app-rewired test",
         "eject": "react-scripts eject"
     },
