--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@cloudbase/js-sdk": "^1.7.2",
     "ahooks": "^3.7.5",
     "antd": "^5.2.3",
     "classnames": "^2.3.2",
