--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ahooks": "^3.7.5",
     "antd": "^5.2.3",
     "classnames": "^2.3.2",
+    "copy-to-clipboard": "^3.3.3",
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
