--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "dayjs": "^1.11.7",
     "echarts": "^5.4.2",
     "echarts-for-react": "^3.0.2",
+    "highlight.js": "^11.7.0",
+    "marked": "^4.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -54,6 +56,7 @@
     "@babel/runtime-corejs3": "7.17.2",
     "@commitlint/cli": "16.2.1",
     "@commitlint/config-conventional": "16.2.1",
+    "@types/marked": "^4.0.8",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "@types/webpack-env": "1.16.3",
