--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@ahooksjs/use-url-state": "^3.5.1",
     "@ant-design/icons": "^5.0.1",
+    "@arco-design/web-react": "^2.47.0",
     "@cloudbase/js-sdk": "^1.5.0",
     "@reduxjs/toolkit": "^1.9.3",
     "ahooks": "^3.7.5",
