--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@arco-design/web-react": "^2.47.0",
     "@cloudbase/js-sdk": "^1.5.0",
     "@reduxjs/toolkit": "^1.9.3",
+    "@types/react-sticky": "^6.0.4",
     "ahooks": "^3.7.5",
     "classnames": "^2.3.2",
     "copy-to-clipboard": "^3.3.3",
@@ -43,7 +44,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.2"
+    "react-router-dom": "^6.8.2",
+    "react-sticky": "^6.0.3"
   },
   "devDependencies": {
     "@babel/core": "7.17.5",
