--- a/package.json
+++ b/package.json
@@ -40,14 +40,13 @@
     "echarts-for-react": "^3.0.2",
     "highlight.js": "^11.7.0",
     "marked": "^4.3.0",
+    "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
-    "react-sticky": "^6.0.3"
-  },
-  "devDependencies": {
+    "react-sticky": "^6.0.3",
     "@babel/core": "7.17.5",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/plugin-transform-runtime": "7.17.0",
@@ -80,7 +79,6 @@
     "less": "4.1.2",
     "less-loader": "10.2.0",
     "mini-css-extract-plugin": "2.5.3",
-    "node-sass": "7.0.1",
     "postcss-loader": "6.2.1",
     "postcss-preset-env": "7.4.1",
     "sass-loader": "12.6.0",
