--- a/package.json
+++ b/package.json
@@ -72,7 +72,6 @@
     "less-loader": "10.2.0",
     "marked": "^4.3.0",
     "mini-css-extract-plugin": "2.5.3",
-    "node-sass": "^9.0.0",
     "postcss-loader": "6.2.1",
     "postcss-preset-env": "7.4.1",
     "react": "^18.2.0",
@@ -81,6 +80,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-sticky": "^6.0.3",
+    "sass": "^1.63.6",
     "sass-loader": "12.6.0",
     "style-loader": "3.3.1",
     "typescript": "^4.9.5",
