--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "start": "NODE_OPTIONS='--openssl-legacy-provider' react-app-rewired start",
+    "build": "NODE_OPTIONS='--openssl-legacy-provider' react-app-rewired build",
     "go": "tcb hosting deploy build -e react-blog-admin-8fo571wf24c87f9"
   },
   "eslintConfig": {
